clients/java-client/gen/tarwyn/ffi/tarwyn_h.java

// Generated by jextract

package tarwyn.ffi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class tarwyn_h extends tarwyn_h$shared {

    tarwyn_h() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    private static final int XT_OK = (int)0L;
    /**
     * {@snippet lang=c :
     * #define XT_OK 0
     * }
     */
    public static int XT_OK() {
        return XT_OK;
    }

    private static class xt_client_new {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_SHORT,
            tarwyn_h.C_SHORT,
            tarwyn_h.C_SHORT,
            tarwyn_h.C_LONG,
            tarwyn_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_client_new");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct Handle *xt_client_new(const char *host, uint16_t push_port, uint16_t req_port, uint16_t sub_port, uint64_t request_timeout_ms, int send_high_water_mark)
     * }
     */
    public static FunctionDescriptor xt_client_new$descriptor() {
        return xt_client_new.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct Handle *xt_client_new(const char *host, uint16_t push_port, uint16_t req_port, uint16_t sub_port, uint64_t request_timeout_ms, int send_high_water_mark)
     * }
     */
    public static MethodHandle xt_client_new$handle() {
        return xt_client_new.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct Handle *xt_client_new(const char *host, uint16_t push_port, uint16_t req_port, uint16_t sub_port, uint64_t request_timeout_ms, int send_high_water_mark)
     * }
     */
    public static MemorySegment xt_client_new$address() {
        return xt_client_new.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct Handle *xt_client_new(const char *host, uint16_t push_port, uint16_t req_port, uint16_t sub_port, uint64_t request_timeout_ms, int send_high_water_mark)
     * }
     */
    public static MemorySegment xt_client_new(MemorySegment host, short push_port, short req_port, short sub_port, long request_timeout_ms, int send_high_water_mark) {
        var mh$ = xt_client_new.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_client_new", host, push_port, req_port, sub_port, request_timeout_ms, send_high_water_mark);
            }
            return (MemorySegment)mh$.invokeExact(host, push_port, req_port, sub_port, request_timeout_ms, send_high_water_mark);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_client_start {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_client_start");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_client_start(struct Handle *handle)
     * }
     */
    public static FunctionDescriptor xt_client_start$descriptor() {
        return xt_client_start.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_client_start(struct Handle *handle)
     * }
     */
    public static MethodHandle xt_client_start$handle() {
        return xt_client_start.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_client_start(struct Handle *handle)
     * }
     */
    public static MemorySegment xt_client_start$address() {
        return xt_client_start.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_client_start(struct Handle *handle)
     * }
     */
    public static int xt_client_start(MemorySegment handle) {
        var mh$ = xt_client_start.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_client_start", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_client_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_client_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void xt_client_free(struct Handle *handle)
     * }
     */
    public static FunctionDescriptor xt_client_free$descriptor() {
        return xt_client_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void xt_client_free(struct Handle *handle)
     * }
     */
    public static MethodHandle xt_client_free$handle() {
        return xt_client_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void xt_client_free(struct Handle *handle)
     * }
     */
    public static MemorySegment xt_client_free$address() {
        return xt_client_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void xt_client_free(struct Handle *handle)
     * }
     */
    public static void xt_client_free(MemorySegment handle) {
        var mh$ = xt_client_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_client_free", handle);
            }
            mh$.invokeExact(handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_dropped_publishes {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_dropped_publishes");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_dropped_publishes(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static FunctionDescriptor xt_dropped_publishes$descriptor() {
        return xt_dropped_publishes.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_dropped_publishes(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static MethodHandle xt_dropped_publishes$handle() {
        return xt_dropped_publishes.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_dropped_publishes(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static MemorySegment xt_dropped_publishes$address() {
        return xt_dropped_publishes.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_dropped_publishes(const struct Handle *handle, uint64_t *out)
     * }
     */
    public static int xt_dropped_publishes(MemorySegment handle, MemorySegment out) {
        var mh$ = xt_dropped_publishes.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_dropped_publishes", handle, out);
            }
            return (int)mh$.invokeExact(handle, out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_log_to {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_log_to");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_log_to(const struct Handle *handle, const char *path)
     * }
     */
    public static FunctionDescriptor xt_log_to$descriptor() {
        return xt_log_to.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_log_to(const struct Handle *handle, const char *path)
     * }
     */
    public static MethodHandle xt_log_to$handle() {
        return xt_log_to.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_log_to(const struct Handle *handle, const char *path)
     * }
     */
    public static MemorySegment xt_log_to$address() {
        return xt_log_to.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_log_to(const struct Handle *handle, const char *path)
     * }
     */
    public static int xt_log_to(MemorySegment handle, MemorySegment path) {
        var mh$ = xt_log_to.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_log_to", handle, path);
            }
            return (int)mh$.invokeExact(handle, path);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_log_to_drive {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_log_to_drive");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_log_to_drive(const struct Handle *handle, const char *filename, char *out_path, size_t out_len)
     * }
     */
    public static FunctionDescriptor xt_log_to_drive$descriptor() {
        return xt_log_to_drive.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_log_to_drive(const struct Handle *handle, const char *filename, char *out_path, size_t out_len)
     * }
     */
    public static MethodHandle xt_log_to_drive$handle() {
        return xt_log_to_drive.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_log_to_drive(const struct Handle *handle, const char *filename, char *out_path, size_t out_len)
     * }
     */
    public static MemorySegment xt_log_to_drive$address() {
        return xt_log_to_drive.ADDR;
    }
